# json2sql

./: .gitignore  README.md  base_data.db  base_data.json  base_data_2.db  base_data_2.json  d_0.db  d_0.json  d_2.db  d_2.json  d_3.db  d_3.json  json_to_sqlite.py  main.py  parser_exemple.py  py.py  pyproject.toml  struc_3.json
docs/: DOCUMENTATION.md  INSTALL_AM.md  INSTALL_EN.md  INSTALL_RU.md  REFERANCES.md
include/: json_engine.py  sqlite_engine.py  tools.py
src/: tools.py
src/json2sql/: __init__.py  main.py
src/json2sql/modules/: __init__.py
src/json2sql/modules/json/: __init__.py  json_engine.py  json_types.py
src/json2sql/modules/json_engine/: json_engine.py  json_types.py
src/json2sql/modules/sql/: __init__.py  postgresql_engine.py  sql_data_types.py  sql_engine.py  sql_type_mapping.py  sqlite_engine.py
src/json2sql/modules/sql_engine/: sqlite_engine.py
src/json2sql/tools/: __init__.py  mixin_handles.py  parsers.py  tools.py
src/modules/: __init__.py
src/modules/json_engine/: __init__.py  json_engine.py  json_types.py
src/modules/sql_engine/: sqlite_engine.py
src/tools/: __init__.py  tools.py
