[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2sql"
version = "0.0.1.dev0925"
description = "json ֆայլի փոյխակերպիչ sql ֆայլի"
authors = [
    { name = "Stpatrirach" }
]
requires-python = ">=3.7"
dependencies = [

    "setuptools>=80.9.0"
]

[tool.setuptools]
packages = ["src"] 
