[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2sql"
version = "0.0.1.dev0925"
description = "json ֆայլի փոյխակերպիչ sql ֆայլի"
readme = "README.md"
authors = [{ name = "Stpatrirach", email = "chinaryannarek@gmail.com"}]
license = { file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "setuptools>=80.9.0"
]

[tool.setuptools]
packages = ["json2sql", 
"json2sql.modules", 
"json2sql.tools", 
"json2sql.modules.json", 
"json2sql.modules.sql"] 
package-dir = {"" = "src"}

[project.scripts]
json2sql = "json2sql.main:main"

